# TrStream

./: .editorconfig  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/cron/: crontab
docker/: Dockerfile.base
docker/services/: Dockerfile.compacter  Dockerfile.consumer  Dockerfile.partitioner  Dockerfile.processor  Dockerfile.producer  Dockerfile.querier  Dockerfile.streamlit
init-scripts/: create_buckets.py
kafka-config/: create-topics.sh
minio/: .gitignore
observability/grafana/: dashboards.yml
observability/prometheus/: prometheus.yml
scripts/: run.sh  run_all.sh  shutdown.sh
scripts-cli/: README.md  run_all.sh
scripts-cli/stripe/: stop.sh
scripts-config/: create_buckets.py
scripts/scripts-cli/: README.md  build.sh  run.sh  run_all.sh
scripts/scripts-config/: create-topics.sh  create_buckets.py
src/compacter/: Dockerfile  __config.py  compacter.py  config.yaml  main.py  settings.py
src/consumer/: Dockerfile  __config.py  consume.py  consumer.py  logging_config.py  main.py  requirements.txt
src/partitioner/: Dockerfile  logging_config.py  main.py  partitioner.py  reader.py  requirements.txt
src/processor/: main.py
src/producer/: Dockerfile  __config.py  __generate.py  config.yaml  generator.py  logging_config.py  main.py  produce.py  producer.py  requirements.txt  settings.py
src/querier/: Dockerfile  __config.py  __utils.py  db.py  logging_config.py  main.py  querier.py  query_manager.py  requirements.txt  utils.py
src/streamlit/: Dockerfile  app.py  (+2 more)
(+149 files in other folders)
